# SafetyConsistentPlanner

./: .gitattributes  .gitignore  README.md  UPSTREAM_VERSIONS.txt  pyproject.toml
configs/data/: nuplan.yaml
configs/evaluation/: workshop.yaml
configs/interface/: coordinate_system.yaml  trajectory.yaml
configs/model/: il_baseline.yaml
configs/mpc/: dcbf.yaml  solver.yaml  vehicle_bicycle.yaml
configs/paths/: local_windows.yaml  server.example.yaml
configs/training/: il_small.yaml  ranker_small.yaml  safety_small.yaml
docs/: END_TO_END_RUNBOOK.md  INTERFACE_SPEC.md  LOCAL_PREPARATION_GUIDE_CN.md  LOCAL_PREPARATION_GUIDE_EN.md  PROJECT_SCOPE.md  ROS2_BASELINE_INVENTORY.txt  ROS2_CORE_SOURCE_REVIEW.txt  ROS2_PREVIOUS_README.txt  ROS2_REFERENCE_MAPPING.md  UPSTREAM_VERSIONS.md
environment/: nuplan_py39.yml  nuplan_py39_constraints.txt
integration/nuplan_py39/: README.md  extract_dataset.py  safety_planner_adapter.py
requirements/: base.txt  solver.txt
scripts/: check_data_gate.py  install_nuplan_py39.sh  planner_worker.py  safety_python.sh  smoke_planner_worker.py
src/safety_planner/datasets/: __init__.py  shards.py  (+3 more)
tests/integration/: test_casadi_solver.py
tests/unit/: test_barrier.py  test_bicycle_model.py  test_coordinate_transform.py  test_evaluation_report.py  test_interface_shapes.py  test_models_basic.py  test_nuplan_extraction.py  test_planner_ipc.py  test_planning_execution.py  test_pseudo_label_roundtrip.py  test_reference_resampler.py  test_road_corridor.py  test_solver_basic.py  test_tensorized_dataset.py  test_training_entrypoints.py
(+45 files in other folders)
