[build-system]
requires = ["setuptools>=75,<84", "wheel>=0.45,<1"]
build-backend = "setuptools.build_meta"

[project]
name = "safety-consistent-planner"
version = "0.1.0"
description = "Safety-consistent learning-based trajectory planning workshop"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
  "msgpack>=1.1,<2",
  "numpy>=2.2,<2.3",
]

[project.optional-dependencies]
solver = ["casadi>=3.7,<3.8"]
learning = ["torch>=2.7,<2.8"]
data = ["pyarrow>=19,<20"]
dev = [
  "pytest>=9.1,<10",
  "pyyaml>=6.0,<7",
  "scikit-learn>=1.7,<1.8",
  "scipy>=1.15,<1.16",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
